354: fixed ClassLoader configuration for Interpreter
Task-Url: http://github.com/LorenzoBettini/edelta/issues/354